# ChangeLog for xfce-base/xfce4-session
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.190 2014/03/05 11:52:51 ssuominen Exp $

  05 Mar 2014; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-session-4.10.1-r1.ebuild:
  Ensure USE="pam" is enabled for x11-misc/alock since the patch is calling it
  with "-auth pam" argument.

*xfce4-session-4.10.1-r1 (05 Mar 2014)

  05 Mar 2014; Samuli Suominen <ssuominen@gentoo.org>
  +files/xfce4-session-4.10.1-alock_support_to_xflock4.patch,
  +xfce4-session-4.10.1-r1.ebuild:
  Support x11-misc/alock in the xflock4 script wrt #501370 by Jesús Guerrero

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.1.ebuild:
  Stable for x86, wrt bug #496018

  19 Jan 2014; Pacho Ramos <pacho@gentoo.org> xfce4-session-4.10.1.ebuild:
  amd64 stable, bug 496018

  31 Dec 2013; Markus Meier <maekke@gentoo.org> xfce4-session-4.10.1.ebuild:
  arm stable, bug #496018

  27 Dec 2013; Jeroen Roovers <jer@gentoo.org> xfce4-session-4.10.1.ebuild:
  Stable for HPPA (bug #496018).

  21 Aug 2013; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-session-4.10.0-r1.ebuild:
  Punt sys-apps/systemd from || ( ) dependency behind USE="consolekit" wrt
  #478258

  09 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-session-4.10.1.ebuild:
  Rename USE="policykit" with USE="systemd" because --enable-systemd is
  disabling ConsoleKit support wrt #469190 by Timo Kamph

  05 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  -xfce4-session-4.10.0.ebuild:
  old

*xfce4-session-4.10.1 (05 May 2013)

  05 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-session-4.10.1.ebuild:
  Version bump.

  13 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.0-r1.ebuild:
  Stable for sparc, wrt bug #465286

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.0-r1.ebuild:
  Stable for ia64, wrt bug #465286
