@@ -5,19 +5,21 @@ AUX xfce4-session-4.10.0-multiple-interactive-session-save.patch 6032 SHA256 b74
 AUX xfce4-session-4.10.1-alock_support_to_xflock4.patch 367 SHA256 2be32b49b268649e509b99e8d93a3d4e57665cbe8e03693bc85f88ea088e0650 SHA512 8ee765241997cbf32c08e9597d42ee666400fb27792a8716f59aa91daba7476e1de679e4c9254653cf9b14d95fc293f22d02e99ef3288287113a72407e513975 WHIRLPOOL b4b440c393c6175c9555d4df5d3eb4e730512c41fd83d291df2817206225efabc8db752887bd3316ae7fc915158a513202fa592536b78d52c4c40bbff7aa7ae8
 DIST xfce4-session-4.10.0.tar.bz2 1257385 SHA256 bb8aa9a74c3d382840596fb4875144d66c7f3f47c8e9ee81d31e3428a72c46ce SHA512 d8d8d7c6c764182e8477d87d3c0d30ea4988e34c3411ffa15901b07738671960c1e62c02c05c45724890cec063f1a5aeeb04ab8b48992917ebfe1975165e969c WHIRLPOOL 21919865dbd9ef9bf3782586d6f2e089860cd21c3a4caad48e75afb0cb139119a8d7c151975466a9b3fd6cb57fc7711f2ec5dad142bc1c14287758577e8081f8
 DIST xfce4-session-4.10.1.tar.bz2 1273015 SHA256 0154fabdc398798c3445374ccc52a2f5bcb2d867fc94bc54114395b24f9cfc83 SHA512 4c6931c350957107fc13f244748287141d524a0e954f48935b5dac2c46a8125af702e1164af98414644f9ea51f5a952db6c57a96fe2a51cab21b616381aac015 WHIRLPOOL fb6193b4d769fb0cd5461a925538bbfa9224b31209d3d16b8bef2f81cbf29aa4cf1c56373335b27326cc2a9f8905a11eec975ee7bc2068168b39e06cd08e64fa
+DIST xfce4-session-4.11.0.tar.bz2 1213569 SHA256 c68905b5124382e30e90f7e4f080fd7e24d58a065991eba9cfcb99e5d59a7c8e SHA512 cbb574117acdefb4781ecb16f7e4681c4c31e624eea2976c88199d3bba883c9a1f114d8b88eebfdd1f5e2c298a672ebf6171ee2b0a117dc54cb675ebd38db90e WHIRLPOOL fa14aa5e321339903460df8471b59b018d34c8453f639f8726e6961d88383aded6319448704d08f74be53ca08c03625dc76857ee328b19cfbaeffadce160d1fe
 EBUILD xfce4-session-4.10.0-r1.ebuild 1859 SHA256 3472930ef687778175aa77d2bcdf2f1cc228fc73b74004fc2d346654d93a04db SHA512 647a86b7cfb3fc2912754ce3aee50a1f487533df47bb0a329d730fe814ba6f35877dd91f86128d1bfdb7ab24ff307b84f0212a8bf0404e561652a518be38f899 WHIRLPOOL 91d431b63a7f4da635c425be0ed8a433bd577c38eccdb3bb13429c609a302c9568c66fbb43626b57642138c9c60181e6e3db4255b5c8c4c08d47a0df286c36a8
 EBUILD xfce4-session-4.10.1-r1.ebuild 1732 SHA256 97d91f928c9fff26c394fb93b11d5c361fe4b042394c3cd8467381ade9ae16b9 SHA512 2773118b3d73f45ace5730f13b35a76df5a7b0d915405e7892f458d0f9f286a23caf8453276c78d94efdd241b9e94c3a6423e3c6b1731abe27172f809f2fbbfe WHIRLPOOL 8f240f3ff6a71eb89a3386fdf7c4e8ed97d198acf0ff5bf5f8f95020fb1dc31110885726c4c444fa3bc1eae87aa8e5c9cfc5b1d18c48159072fb838fc0a57276
 EBUILD xfce4-session-4.10.1.ebuild 1637 SHA256 13ce6cebe64c14742061572e204cfb58213336325feefa07781a7d0ab058cf19 SHA512 7f18f1e79d87ad1616ba6c73907d56443fca0b076697c00e9f7e841da855d7d3a7c7ff04a65697bf2351f64647c1879381849aea4b15d2cb6b2c5c08ea2d9286 WHIRLPOOL a9b7e4229823b9e5390625180283587afb520f8af5d1665d2284f9fbbf05cc874a1d2e169c86fb2f19ffd6345f437604b71dc42e3e6411f7a26c0db2688b53ec
-MISC ChangeLog 25521 SHA256 e03472fb63d2829b5682f8d7a5b562ad2164df363aedcef36df1ac868c6d0e88 SHA512 16991a45fbde0a6391c7b485e08846e1c7e4089b66d695fbd00c7d992ae25b5427783e3505fd7eb98b4ad88b7ed49a665e0c7683eac40acbf2f7c5189d256211 WHIRLPOOL 43a5465fe9bcf773af565d39549af4e139ad26be6bb8acaa85c94c2e15a385e0d00d7381f46fa454ace205ae55b55a0d95ba64464beeee5a09801910c83c5d8b
+EBUILD xfce4-session-4.11.0.ebuild 1735 SHA256 2e49345e0f2b90dbc454ae0a28fa99980a129fd7da68804158e3052b9d215044 SHA512 d899af9955f2a155d4ede79836ba3aa71d0a79f02f54af912c84225e1ff69cb522e52202fc750519ae2863dffacc23069eb8b7d6e36e875ed0db43bfa73c27d8 WHIRLPOOL f8fce2fe8a811a733e43b4f6c24548c6630fc952e8e81de8297a0389f13061fa1e7ea928055ad609b8088b72fac4acea308a92d00b6358cbed5ecd8c680a1d6e
+MISC ChangeLog 25672 SHA256 647404f4d07a5baa9055eab26ec0356ea04c8193f1a1af15cbd65e58554ffa45 SHA512 e9a52233cf6e3e08f73683ebec735c74a7bc5020f6907f5dc9b72a11cc4afec1ebd60d4216f5032793fb7da5487c8871c6358f9e1f43702ff9082d7fdfb0db79 WHIRLPOOL 4a9739450293f3603a35ca6ec603d566b89f18f218c1f3fc7e1620f93bc140b416f947252ef312882dc1994f7e670954ac0e47a49b089a2eb59b152f467b5836
 MISC metadata.xml 390 SHA256 1d122a4418cea15fd68cb18d3c1b6db5120ac2109f228fbf6805967d9cb1431c SHA512 662e0dc55e20f785d376ce74919c280af92ddd43b61eca9eb364e736b76c854427b8d87e392eaa54576073c44f074939789d86b28cbf4eb5515ba1f1f4b8554e WHIRLPOOL 95207640f5dad56c4129aaa9c947e668f4b8617919e27b1471be644fc6f56fed264740f37b92e63a8af0594ee63b0089a37d33c81496a0b7679be8389ba0a3cc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTFw9ZAAoJEEdUh39IaPFNyx4H/186FJfIiszSG0VFFWeQfXLZ
-IIbHlTMBhKeaQcayAB3eg73xAgnHCwOGafDZu21S4nbj2avC7HBWM8PL+l772Ipa
-T60F/ZtWMP+ZgY0TB0OBp4+c8hAPTWTWRgvC9usKYKfh9+PWxgKhmUPDgVN4rB9c
-nvgf7PS/mDDdi3t+J3hytMafeFTCC+jhimkzfWPvyGNxWGfyUB/InfNFDpyjFeXM
-7nValNiAdgghFRkxxHj0uog8BIsppoxgkHs+73uJsKp5u3VJ9+gZQjaBdvBaXZBO
-sPX9cTPOJfOToRE9SfRzv2SeBmw81UIMngowibziyfTFF0c2zhwGYE5pHZ572MU=
-=6ut2
+iQEcBAEBCAAGBQJTHyh7AAoJEEdUh39IaPFN490H/2OkaiVs9V0ZHRwyMkXB/La9
+aBP3sKO1qTGfsc2DIdjuqp3oIWliegkvs25GJYFvhNc8N+9RfT/SEG+mKqi9J+5s
+HMwlMEZ5sByytAUDoT/AkffHPEYMIiilHJFUoNt9/Y1rh0ZoM6A+8cGUCZ3WfGhY
+wgtfIM/OEntI9WRJDPoqP9d8jNW1Gjue6XiwFlr4eAtcA0d/0wO4ro67MzsUCdN/
+5qy7BQtW7HK03G3mPv453Kpy29TkXIunzBcRhwFWtMg8pNG3aex7mTJibB8vjr9t
+oydFLHxFOqy3SquP05Mg/SP3N2gRCA3UhnBOm+OwyItgtmJyQymGAd3di0vrCrE=
+=0rqR
 -----END PGP SIGNATURE-----
