@@ -1,6 +1,12 @@
 # ChangeLog for xfce-base/xfce4-session
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.190 2014/03/05 11:52:51 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.191 2014/03/11 15:18:44 ssuominen Exp $
+
+*xfce4-session-4.11.0 (11 Mar 2014)
+
+  11 Mar 2014; Samuli Suominen <ssuominen@gentoo.org>
+  +xfce4-session-4.11.0.ebuild:
+  Prerelease version bump.
 
   05 Mar 2014; Samuli Suominen <ssuominen@gentoo.org>
   xfce4-session-4.10.1-r1.ebuild:
